Corregir reglas de rewrite para Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
   "rewrites": [
-    { "source": "/", "destination": "/views/index.html" }
+    { "source": "/css/(.*)", "destination": "/public/css/$1" },
+    { "source": "/images/(.*)", "destination": "/public/images/$1" },
+    { "source": "/", "destination": "/public/views/index.html" }
   ]
 }
